logs/odooku-odoo-website-forum.log
Listing '.'...
Listing './bin'...
Compiling './bin/enhancer.py'...
Compiling './bin/explode.py'...
Compiling './bin/gifmaker.py'...
Compiling './bin/painter.py'...
Compiling './bin/pilconvert.py'...
Compiling './bin/pildriver.py'...
Compiling './bin/pilfile.py'...
Compiling './bin/pilfont.py'...
Compiling './bin/pilprint.py'...
Compiling './bin/player.py'...
Compiling './bin/rst2html.py'...
Compiling './bin/rst2latex.py'...
Compiling './bin/rst2man.py'...
Compiling './bin/rst2odt.py'...
Compiling './bin/rst2odt_prepstyles.py'...
Compiling './bin/rst2pseudoxml.py'...
Compiling './bin/rst2s5.py'...
Compiling './bin/rst2xetex.py'...
Compiling './bin/rst2xml.py'...
Compiling './bin/rstpep2html.py'...
Compiling './bin/runxlrd.py'...
Compiling './bin/thresholder.py'...
Compiling './bin/viewer.py'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/docutils'...
Listing './lib/python3.5/site-packages/docutils/languages'...
Listing './lib/python3.5/site-packages/docutils/parsers'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/directives'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/include'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/languages'...
Listing './lib/python3.5/site-packages/docutils/readers'...
Listing './lib/python3.5/site-packages/docutils/transforms'...
Listing './lib/python3.5/site-packages/docutils/utils'...
Listing './lib/python3.5/site-packages/docutils/utils/math'...
Listing './lib/python3.5/site-packages/docutils/writers'...
Listing './lib/python3.5/site-packages/docutils/writers/html4css1'...
Listing './lib/python3.5/site-packages/docutils/writers/latex2e'...
Listing './lib/python3.5/site-packages/docutils/writers/odf_odt'...
Listing './lib/python3.5/site-packages/docutils/writers/pep_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/default'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-white'...
Listing './lib/python3.5/site-packages/docutils/writers/xetex'...
Listing './lib/python3.5/site-packages/docutils-0.12.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.10.dist-info'...
Listing './lib/python3.5/site-packages/html2text'...
Listing './lib/python3.5/site-packages/html2text-2017.10.4.egg-info'...
Listing './lib/python3.5/site-packages/num2words'...
Compiling './lib/python3.5/site-packages/num2words/lang_EN_EUR.py'...
***   File "./lib/python3.5/site-packages/num2words/lang_EN_EUR.py", line 41
    print val, "is", n2w.to_currency(val)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/num2words/lang_EN_GB_old.py'...
***   File "./lib/python3.5/site-packages/num2words/lang_EN_GB_old.py", line 41
    print val, "is", n2w.to_currency(val)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/num2words-0.5.5.dist-info'...
Listing './lib/python3.5/site-packages/olefile'...
Listing './lib/python3.5/site-packages/olefile-0.44.egg-info'...
Listing './lib/python3.5/site-packages/passlib'...
Listing './lib/python3.5/site-packages/passlib/_setup'...
Listing './lib/python3.5/site-packages/passlib/ext'...
Listing './lib/python3.5/site-packages/passlib/ext/django'...
Listing './lib/python3.5/site-packages/passlib/handlers'...
Listing './lib/python3.5/site-packages/passlib/tests'...
Listing './lib/python3.5/site-packages/passlib/utils'...
Listing './lib/python3.5/site-packages/passlib/utils/_blowfish'...
Listing './lib/python3.5/site-packages/passlib-1.6.5.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.2.2.egg-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.5.3.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2016.7.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.11.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.10.0.dist-info'...
Listing './lib/python3.5/site-packages/suds'...
Listing './lib/python3.5/site-packages/suds/bindings'...
Listing './lib/python3.5/site-packages/suds/mx'...
Listing './lib/python3.5/site-packages/suds/sax'...
Listing './lib/python3.5/site-packages/suds/transport'...
Listing './lib/python3.5/site-packages/suds/umx'...
Listing './lib/python3.5/site-packages/suds/xsd'...
Listing './lib/python3.5/site-packages/suds_jurko-0.6.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/external'...
Listing './lib/python3.5/site-packages/xlrd'...
Listing './lib/python3.5/site-packages/xlrd/doc'...
Listing './lib/python3.5/site-packages/xlrd/examples'...
Listing './lib/python3.5/site-packages/xlrd-1.0.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
